syntax = "proto3";

package meme;
option go_package = "pb";

service Posts {
  rpc Add(PostsAddRequest) returns (PostsAddResponse);
  rpc ToggleLike(ToggleLikeRequest) returns (ToggleLikeResponse);
}

message PostsAddRequest {
  string text = 1;
}

message PostsAddResponse {
  string postUrl = 1;
}

message ToggleLikeRequest {
  enum Action {
    LIKE = 0;
    UNLIKE = 1;
  }
  Action action = 1;
  string postId = 2;
}

message ToggleLikeResponse {
  int32 likesCount = 1;
}
